--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DramaFit Studio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <div id="root"></div>
     <!--
       This HTML file is a template.
